update about me

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About Me"
 description: "Hey, this is kikoxxxi."
-header-img: "img/about-me.jpg"
+header-img: "img/Jobs.jpg"
 ---
 
 <!-- Language Selector -->
@@ -21,7 +21,7 @@ header-img: "img/about-me.jpg"
         <!--</p>-->
     </blockquote>
 
-    <p>Hey，我是<strong> kikoxxxi</strong> 编程技术爱好者，喜欢旅行，喜欢摄影.22岁之前的我在迷茫在寻找，22岁之后的我有了方向，在追寻，在努力。希望得到我要的人生。</p>
+    <p>Hey，我是<strong> kikoxxxi</strong></p>
 
 
 
